welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: value !== is not a member of Int
		if (value!==nums(x)) {
                         ^